<resources>
    <string name="app_name">PomeAndroid</string>
    <string name="menu_record">기록</string>
    <string name="menu_recollect">회고</string>
    <string name="menu_friends">친구</string>
    <string name="menu_mypage">마이</string>
    <string name="profile_title">나만의 프로필을 \n만들어 볼까요?</string>
    <string name="finish">만들었어요</string>
    <string name="complete">완료했어요</string>
    <string name="next">다음에 할래요</string>
    <string name="emotion_select">남겼어요</string>
    <string name="emotion_complete">확인했어요</string>
    <string name="emotion_record">감정 기록이 완료됐어요!</string>
    <string name="emotion_recordment">감정 기록이 완료된 씀씀이는 \n회고에서 확인할 수 있어요</string>
    <string name="addfriend">친구 추가</string>
    <string name="noresult">검색 결과가 없어요 \n다른 닉네임으로 검색해볼까요?</string>
    <string name="findfriend">친구의 닉네임을 검색해보세요</string>
    <string name="signup_finish">회원가입 완료! \n친구를 추가해볼까요?</string>
    <string name="cheer_coment">친구의 소비 기록을 확인하고 \n서로 응원할 수 있어요</string>
    <string name="nickname_hint">영어, 한국어 최대 10자 이내 입력</string>
    <string name="emotion_ment">일주일이 지난 오늘의 \n솔직한 감정을 남겨주세요</string>
    <string name="pome_ment">포미는 순간의 감정에 집중해 \n한번 기록된 감정은 바꿀 수 없어요</string>
    <string name="sign_password_detail">영어,한국어,숫자,특수 문자 조합으로 입력해 주세요</string>
    <string name="profile_content">입력한 정보는 회원을 식별하고 친구간 커뮤니케이션을 위한 \n동의 목적으로만 사용되며 포미 이용기간 동안 보관돼요</string>
    <!--    FriendsFragment-->
    <string name="cheer_friends">친구 응원하기</string>
    <string name="whole_friends">전체</string>
    <string name="empty_friends">아직 추가한 친구가 없어요</string>
    <string name="empty_records">아직 남길 기록이 없어요</string>
    <string name="empty_noemotion">해당 감정을 남긴 친구가 없어요</string>

    <!--   RemindFragment -->
    <string name="remind_h1">씀씀이 돌아보기</string>
    <string name="remind_h2">일주일 전후 감정변화를 비교해 보세요</string>
    <string name="remind_firstemotion">처음 감정</string>
    <string name="remind_secondemotion">돌아본 감정</string>
    <string name="remind_nogoal_msg">아직 추가된 목표가 없어요</string>
    <string name="remind_nogoal">ㅡ</string>
    <string name="reminid_nogoal_ment">아직 돌아본 씀씀이가 없어요</string>
    <string name="remind_happy">행복해요</string>
    <string name="remind_idk">모르겠어요</string>
    <string name="remind_regret">후회해요</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="price_format">%,2d</string>
    <string name="percent">%d</string>
    <string name="dash">&#45;</string>
    <string name="lookbackrecord">"다시 돌아볼 씀씀이가 "</string>
    <string name="thereis">건 있어요</string>
    <string name="over">초과</string>
    <string name="total">"전체 "</string>
    <string name="number">건</string>
</resources>