<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.login.screens.AddFriendActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/PomeSb14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addfriend"
        android:textColor="@color/pome_grey_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/et_nickname"
            style="@style/PomeM16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey_round_6"
            android:hint="@string/findfriend"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:textCursorDrawable="@drawable/cursor_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/pome_grey_0"
            android:src="@drawable/ic_search"
            android:padding="3dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_nickname"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_complete"
        app:layout_constraintTop_toBottomOf="@id/cl_friend">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_warning"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/PomeM14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/noresult"
            android:textColor="@color/pome_grey_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_warning" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_friend"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_complete"
        app:layout_constraintTop_toBottomOf="@+id/cl_friend"
        tools:listitem="@layout/item_friend_list" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete"
        style="@style/PomeB18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle_green_round_6"
        android:paddingVertical="15dp"
        android:text="@string/complete"
        android:textColor="@color/pome_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>